--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "mjj",
   "version": "1.1.1",
   "main": "index.js",
-  "repository": "https://github.com/mjjonone/mjj",
-  "author": "mjjonone",
+  "repository": "",
+  "author": "",
   "license": "Apache-2.0",
   "private": true,
   "scripts": {
